@@ -17,6 +17,9 @@
   <body>
     <h2>Accounts: Configuration</h2>
 
+    <div class="notice system-message" py:if="result">
+      <p>${result}</p>
+    </div>
     <form id="accountsconfig" class="mod" method="post">
       <fieldset py:for="section in sections">
         <legend>
@@ -46,6 +49,10 @@
           <input type="checkbox" name="refresh_passwd" value="true"
                  checked="${refresh_passwd and 'checked' or None}" />
           Silently update password hashes on next successful login.</label>
+          <div class="buttons">
+            <input type="submit" name="restart"
+              value="${dgettext('acct_mgr', 'Restart')}" />
+          </div>
       </fieldset>
 
       <fieldset>
